regression/negative/duplicated_define.asm
        device zxspectrum128

        define label "value1"
        define label "value2"
