regression/negative/duplicated_define.out
Pass 1 complete (0 errors)
duplicated_define.asm(4): error: Duplicate define: label
Pass 2 complete (1 errors)
duplicated_define.asm(4): error: Duplicate define: label
Pass 3 complete
Errors: 2, warnings: 0, compiled: 5 lines
